src/main/java/umg/edu/antlr/python/PythonParser.java
// Generated from C:/Code/Projects/Java/CompiladorMultilenguaje/src/main/java/umg/edu/antlr/python/PythonParser.g4 by ANTLR 4.13.2
package umg.edu.antlr.python;

    import java.util.*;
    import umg.edu.symboltable.*;
    import umg.edu.error.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, AS=2, ASSERT=3, BREAK=4, CLASS=5, CONTINUE=6, DEF=7, DEL=8, ELIF=9, 
		ELSE=10, EXCEPT=11, FINALLY=12, FOR=13, FROM=14, GLOBAL=15, IF=16, IMPORT=17, 
		IN=18, IS=19, LAMBDA=20, NONLOCAL=21, NOT=22, OR=23, PASS=24, RAISE=25, 
		RETURN=26, TRY=27, WHILE=28, WITH=29, YIELD=30, ASYNC=31, AWAIT=32, TRUE=33, 
		FALSE=34, NONE=35, ASSIGN=36, PLUS_ASSIGN=37, MINUS_ASSIGN=38, MULT_ASSIGN=39, 
		DIV_ASSIGN=40, FLOOR_DIV_ASSIGN=41, MOD_ASSIGN=42, POWER_ASSIGN=43, BIT_AND_ASSIGN=44, 
		BIT_OR_ASSIGN=45, BIT_XOR_ASSIGN=46, LEFT_SHIFT_ASSIGN=47, RIGHT_SHIFT_ASSIGN=48, 
		PLUS=49, MINUS=50, MULT=51, DIV=52, FLOOR_DIV=53, MOD=54, POWER=55, EQ=56, 
		NE=57, LT=58, LE=59, GT=60, GE=61, BIT_AND=62, BIT_OR=63, BIT_XOR=64, 
		BIT_NOT=65, LEFT_SHIFT=66, RIGHT_SHIFT=67, ARROW=68, SEMICOLON=69, COMMA=70, 
		DOT=71, COLON=72, ELLIPSIS=73, LPAREN=74, RPAREN=75, LBRACE=76, RBRACE=77, 
		LBRACKET=78, RBRACKET=79, AT=80, STRING_PREFIX=81, INTEGER_LITERAL=82, 
		FLOAT_LITERAL=83, COMPLEX_LITERAL=84, STRING_LITERAL=85, FSTRING_START=86, 
		IDENTIFIER=87, COMMENT=88, NEWLINE=89, WS=90, INDENT=91, DEDENT=92, FSTRING_END=93, 
		FSTRING_LBRACE=94, FSTRING_TEXT=95;
	public static final int
		RULE_file_input = 0, RULE_statement = 1, RULE_simple_stmt = 2, RULE_small_stmt = 3, 
		RULE_expr_stmt = 4, RULE_annassign = 5, RULE_testlist_star_expr = 6, RULE_augassign = 7, 
		RULE_del_stmt = 8, RULE_pass_stmt = 9, RULE_flow_stmt = 10, RULE_break_stmt = 11, 
		RULE_continue_stmt = 12, RULE_return_stmt = 13, RULE_yield_stmt = 14, 
		RULE_raise_stmt = 15, RULE_import_stmt = 16, RULE_import_name = 17, RULE_import_from = 18, 
		RULE_import_as_name = 19, RULE_dotted_as_name = 20, RULE_import_as_names = 21, 
		RULE_dotted_as_names = 22, RULE_dotted_name = 23, RULE_global_stmt = 24, 
		RULE_nonlocal_stmt = 25, RULE_assert_stmt = 26, RULE_compound_stmt = 27, 
		RULE_async_stmt = 28, RULE_if_stmt = 29, RULE_while_stmt = 30, RULE_for_stmt = 31, 
		RULE_try_stmt = 32, RULE_with_stmt = 33, RULE_with_item = 34, RULE_except_clause = 35, 
		RULE_suite = 36, RULE_test = 37, RULE_test_nocond = 38, RULE_lambdef = 39, 
		RULE_lambdef_nocond = 40, RULE_or_test = 41, RULE_and_test = 42, RULE_not_test = 43, 
		RULE_comparison = 44, RULE_comp_op = 45, RULE_star_expr = 46, RULE_expr = 47, 
		RULE_xor_expr = 48, RULE_and_expr = 49, RULE_shift_expr = 50, RULE_arith_expr = 51, 
		RULE_term = 52, RULE_factor = 53, RULE_power = 54, RULE_atom_expr = 55, 
		RULE_atom = 56, RULE_testlist_comp = 57, RULE_trailer = 58, RULE_subscriptlist = 59, 
		RULE_subscript = 60, RULE_sliceop = 61, RULE_exprlist = 62, RULE_testlist = 63, 
		RULE_dictorsetmaker = 64, RULE_listmaker = 65, RULE_classdef = 66, RULE_arglist = 67, 
		RULE_argument = 68, RULE_comp_iter = 69, RULE_comp_for = 70, RULE_comp_if = 71, 
		RULE_yield_expr = 72, RULE_yield_arg = 73, RULE_funcdef = 74, RULE_parameters = 75, 
		RULE_typedargslist = 76, RULE_tfpdef = 77, RULE_varargslist = 78, RULE_vfpdef = 79, 
		RULE_decorated = 80, RULE_async_funcdef = 81, RULE_decorators = 82, RULE_decorator = 83, 
		RULE_number = 84, RULE_string = 85, RULE_fstring_middle = 86;
	private static String[] makeRuleNames() {
		return new String[] {
			"file_input", "statement", "simple_stmt", "small_stmt", "expr_stmt", 
			"annassign", "testlist_star_expr", "augassign", "del_stmt", "pass_stmt", 
			"flow_stmt", "break_stmt", "continue_stmt", "return_stmt", "yield_stmt", 
			"raise_stmt", "import_stmt", "import_name", "import_from", "import_as_name", 
			"dotted_as_name", "import_as_names", "dotted_as_names", "dotted_name", 
			"global_stmt", "nonlocal_stmt", "assert_stmt", "compound_stmt", "async_stmt", 
			"if_stmt", "while_stmt", "for_stmt", "try_stmt", "with_stmt", "with_item", 
			"except_clause", "suite", "test", "test_nocond", "lambdef", "lambdef_nocond", 
			"or_test", "and_test", "not_test", "comparison", "comp_op", "star_expr", 
			"expr", "xor_expr", "and_expr", "shift_expr", "arith_expr", "term", "factor", 
			"power", "atom_expr", "atom", "testlist_comp", "trailer", "subscriptlist", 
			"subscript", "sliceop", "exprlist", "testlist", "dictorsetmaker", "listmaker", 
			"classdef", "arglist", "argument", "comp_iter", "comp_for", "comp_if", 
			"yield_expr", "yield_arg", "funcdef", "parameters", "typedargslist", 
			"tfpdef", "varargslist", "vfpdef", "decorated", "async_funcdef", "decorators", 
			"decorator", "number", "string", "fstring_middle"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'as'", "'assert'", "'break'", "'class'", "'continue'", 
			"'def'", "'del'", "'elif'", "'else'", "'except'", "'finally'", "'for'", 
			"'from'", "'global'", "'if'", "'import'", "'in'", "'is'", "'lambda'", 
			"'nonlocal'", "'not'", "'or'", "'pass'", "'raise'", "'return'", "'try'", 
			"'while'", "'with'", "'yield'", "'async'", "'await'", "'True'", "'False'", 
			"'None'", "'='", "'+='", "'-='", "'*='", "'/='", "'//='", "'%='", "'**='", 
			"'&='", "'|='", "'^='", "'<<='", "'>>='", "'+'", "'-'", "'*'", "'/'", 
			"'//'", "'%'", "'**'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
			"'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'->'", "';'", "','", "'.'", 
			"':'", "'...'", "'('", "')'", null, "'}'", "'['", "']'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "AS", "ASSERT", "BREAK", "CLASS", "CONTINUE", "DEF", "DEL", 
			"ELIF", "ELSE", "EXCEPT", "FINALLY", "FOR", "FROM", "GLOBAL", "IF", "IMPORT", 
			"IN", "IS", "LAMBDA", "NONLOCAL", "NOT", "OR", "PASS", "RAISE", "RETURN", 
			"TRY", "WHILE", "WITH", "YIELD", "ASYNC", "AWAIT", "TRUE", "FALSE", "NONE", 
			"ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", 
			"FLOOR_DIV_ASSIGN", "MOD_ASSIGN", "POWER_ASSIGN", "BIT_AND_ASSIGN", "BIT_OR_ASSIGN", 
			"BIT_XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "PLUS", 
			"MINUS", "MULT", "DIV", "FLOOR_DIV", "MOD", "POWER", "EQ", "NE", "LT", 
			"LE", "GT", "GE", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "LEFT_SHIFT", 
			"RIGHT_SHIFT", "ARROW", "SEMICOLON", "COMMA", "DOT", "COLON", "ELLIPSIS", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "AT", 
			"STRING_PREFIX", "INTEGER_LITERAL", "FLOAT_LITERAL", "COMPLEX_LITERAL", 
			"STRING_LITERAL", "FSTRING_START", "IDENTIFIER", "COMMENT", "NEWLINE", 
			"WS", "INDENT", "DEDENT", "FSTRING_END", "FSTRING_LBRACE", "FSTRING_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private SymbolTable symbolTable = new SymbolTable();
	    private ErrorTable errorTable = new ErrorTable();
	    private Set<String> definedVariables = new HashSet<>();
	    private Set<String> importedModules = new HashSet<>();
	    
	    public SymbolTable getSymbolTable() { return symbolTable; }
	    public ErrorTable getErrorTable() { return errorTable; }
	    
	    private void addSymbol(String name, String type, int line, int column) {
	        Symbol symbol = new Symbol(name, type, "global", null, line, column);
	        symbolTable.addSymbol(symbol);
	    }
	    
	    private void addError(String message, int line, int column, String type) {
	        CompilationError.ErrorType errorType = CompilationError.ErrorType.SEMANTIC;
	        if ("LEXICAL".equals(type)) {
	            errorType = CompilationError.ErrorType.LEXICAL;
	        } else if ("SYNTACTIC".equals(type)) {
	            errorType = CompilationError.ErrorType.SYNTACTIC;
	        }
	        CompilationError error = new CompilationError(errorType, message, line, column, "");
	        errorTable.addError(error);
	    }
	    
	    private void checkVariableUsage(String varName, int line, int column) {
	        if (!definedVariables.contains(varName) && !importedModules.contains(varName)) {
	            addError("Variable '" + varName + "' is not defined", line, column, "SEMANTIC");
	        }
	    }
	    
	    private void defineVariable(String varName) {
	        definedVariables.add(varName);
	    }
	    
	    private void addImport(String moduleName) {
	        importedModules.add(moduleName);
	    }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterFile_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitFile_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitFile_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3940718384243192L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 8301313L) != 0)) {
				{
				{
				setState(174);
				statement();
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(184);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSERT:
			case BREAK:
			case CONTINUE:
			case DEL:
			case FROM:
			case GLOBAL:
			case IMPORT:
			case LAMBDA:
			case NONLOCAL:
			case NOT:
			case PASS:
			case RAISE:
			case RETURN:
			case YIELD:
			case AWAIT:
			case TRUE:
			case FALSE:
			case NONE:
			case PLUS:
			case MINUS:
			case MULT:
			case BIT_NOT:
			case ELLIPSIS:
			case LPAREN:
			case LBRACE:
			case LBRACKET:
			case INTEGER_LITERAL:
			case FLOAT_LITERAL:
			case COMPLEX_LITERAL:
			case STRING_LITERAL:
			case FSTRING_START:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(182);
				simple_stmt();
				}
				break;
			case CLASS:
			case DEF:
			case FOR:
			case IF:
			case TRY:
			case WHILE:
			case WITH:
			case ASYNC:
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(183);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PythonParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PythonParser.SEMICOLON, i);
		}
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSimple_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSimple_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			small_stmt();
			setState(191);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(187);
					match(SEMICOLON);
					setState(188);
					small_stmt();
					}
					} 
				}
				setState(193);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(194);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public Del_stmtContext del_stmt() {
			return getRuleContext(Del_stmtContext.class,0);
		}
		public Pass_stmtContext pass_stmt() {
			return getRuleContext(Pass_stmtContext.class,0);
		}
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public Nonlocal_stmtContext nonlocal_stmt() {
			return getRuleContext(Nonlocal_stmtContext.class,0);
		}
		public Assert_stmtContext assert_stmt() {
			return getRuleContext(Assert_stmtContext.class,0);
		}
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmall_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmall_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSmall_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
